--- a/index.css
+++ b/index.css
@@ -16,13 +16,36 @@ body {
   display: grid;
   grid-template-rows: repeat(21, 1fr);
   grid-template-columns: repeat(21, 1fr);
+  background: linear-gradient(
+    90deg,
+    rgb(0, 36, 5) 0%,
+    rgb(9, 121, 15) 35%,
+    rgb(102, 255, 0) 100%
+  );
 }
 
-.score {
+.game-info {
   color: white;
   position: absolute;
   top: 30px;
   left: 30px;
+}
+
+.game-info > h1 {
+  background-color: linear-gradient(
+    90deg,
+    rgb(36, 14, 0) 0%,
+    rgb(121, 9, 9) 35%,
+    rgb(200, 255, 0) 100%
+  );
+}
+
+.score {
+  margin-top: 20px;
+}
+
+.vanish {
+  display: none;
 }
 
 .snake {
